--- a/YelpCamp/v1/views/campgrounds.ejs
+++ b/YelpCamp/v1/views/campgrounds.ejs
@@ -1,1 +1,7 @@
 <h1>This is the Campgrounds Page!</h1>
+
+<% campgrounds.forEach(function(campground){ %>
+    <li>
+        <%= campground.name %>
+    </li>
+<% }) %>
