--- a/YelpCamp/v1/views/new.ejs
+++ b/YelpCamp/v1/views/new.ejs
@@ -2,7 +2,7 @@
 <h1>Create a New Campground</h1>
 
 <form action="/campgrounds" method="POST">
-    <input type="text" namd="name" placeholder="name">
+    <input type="text" name="name" placeholder="name">
     <input type="text" name="image" placeholder="image url">
     <button>Submit!</button>
 </form>
