--- a/YelpCamp/v1/views/partials/header.ejs
+++ b/YelpCamp/v1/views/partials/header.ejs
@@ -8,4 +8,17 @@
     <title>YelpCamp</title>
 </head>
 <body>
-    
+        <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="/">YelpCamp</a>
+                    </div>
+                    <div class="collapse navbar-collapse">
+                        <ul class="navbar-nav mr-auto">
+                            <li><a href="/">Login</a></li>
+                            <li><a href="/">Sign Up</a></li>
+                            <li><a href="/">Logout</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
